# lifepath-planner

./: .env  .env.example  .gitignore  DEPLOYMENT_ISSUE_ANALYSIS.md  Dockerfile  RAILWAY_ENV_TROUBLESHOOTING.md  RAILWAY_OPENAI_SETUP.md  README.md  VALIDATION_QUICKSTART.md  VERCEL_DEBUGGING.md  VERCEL_ENV_SETUP.md  VERCEL_ENV_VARS.md  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  sample_budget.csv  vercel.env
.github/workflows/: ci.yml
docs/: AI_integration_readiness.md  PRD.md  accessibility.md  account_integration.md  ai_questioning_spec.md  api_contracts.md  budget_schema.md  calculators.md  competitive_audit.md  current_state_reality_assessment.md  deployment.md  design-system.md  development.md  differentiation_analysis.md  legacy-service-deprecation-checklist.md  legacy-service-removal-plan.md  llm_adapter.md  operations.md  pre_integration_prompts.md  real_world_validation.md  roadmap.md  security.md  ui_components_spec.md  ui_ux_audit_report.md  vercel-deployment.md
docs/architecture/: README.md  goal_tracking.md  persistence_layer.md  phase_9.1_account_context_integration.md  projection_service.md  scenario_planning.md
docs/archive/: legacy-service-deprecation-checklist.md  legacy-service-removal-plan.md  pre_integration_prompts.md
scripts/: check_openai_config.sh  check_railway_env.py  dev.sh  setup-vercel-ai-gateway.sh  setup-vercel-ai-gateway.ts  start-production.sh  test-persistence.sh  validate_real_world.py  validate_real_world.sh  verify-deployment.sh
services/: provider_settings.py
services/api-gateway/: Procfile  README.md  gateway.out  requirements.txt
services/api-gateway/src/: answer_validation.py  http_client.py  main.py
services/api-gateway/src/data/: gateway.db
services/api-gateway/src/middleware/: __init__.py  rate_limit.py
services/api-gateway/src/persistence/: __init__.py  database.py  models.py  repository.py
services/api-gateway/tests/: conftest.py  test_gateway_smoke.py  test_gateway_submit_answers.py  test_http_client.py  test_persistence.py  test_rate_limiting.py
services/budget-ingestion-service/: Procfile  ingestion.out  requirements.txt
services/budget-ingestion-service/src/: __init__.py  main.py
services/budget-ingestion-service/src/models/: raw_budget.py
services/budget-ingestion-service/src/parsers/: csv_parser.py  format_detection.py  xlsx_parser.py
services/budget-ingestion-service/tests/: conftest.py  test_format_detection.py  test_ingest_parsers.py
services/budget-ingestion-service/tests/fixtures/: household_sample.csv  household_sample.xlsx  ledger_sample.csv
services/clarification-service/: Procfile  README.md  requirements.txt
services/clarification-service/src/: adaptive_questioning.py  budget_normalization.py  clarification_provider.py  main.py  normalization.py  query_analyzer.py  question_generator.py  ui_schema_builder.py
services/clarification-service/src/providers/: __init__.py  openai_budget_normalization.py  openai_clarification.py
services/clarification-service/tests/: conftest.py  test_adaptive_questioning.py  test_ai_quality.py  test_apply_answers_endpoint.py  test_normalization.py  test_openai_clarification_provider.py  test_provider_selection.py  test_query_analyzer.py  test_ui_schema_builder.py
services/clarification-service/tests/fixtures/: ai_answers_payload.json  mock_clarification_provider.json  sample_budget_for_comparison.json
services/observability/: privacy.py
services/optimization-service/: Procfile  README.md  requirements.txt
services/optimization-service/src/: __init__.py  budget_model.py  compute_summary.py  generate_suggestions.py  heuristics.py  main.py  suggestion_provider.py
services/optimization-service/src/providers/: __init__.py  openai_suggestions.py
services/optimization-service/tests/: conftest.py  test_compute_summary.py  test_generate_suggestions.py  test_heuristics.py  test_openai_suggestion_provider.py  test_provider_selection.py
services/optimization-service/tests/fixtures/: mock_suggestions_provider.json
services/shared/: __init__.py  provider_settings.py  pyproject.toml
services/shared/observability/: __init__.py  privacy.py  telemetry.py
services/ui-streamlit/: README.md  app.py
services/ui-web/: .eslintrc.cjs  .gitignore  .prettierignore  README.md  next.config.ts  package-lock.json  package.json  prettier.config.cjs  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
services/ui-web/e2e/: playwright.config.ts  upload-flow.spec.ts
services/ui-web/scripts/: test-build.sh  validate-vercel-config.js
services/ui-web/src/: middleware.ts
services/ui-web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
services/ui-web/src/components/: ClarificationForm.tsx  DeveloperPanel.tsx  EditableBudgetSection.tsx  EditableQuerySection.tsx  (+7 more)
tests/: conftest.py  test_deterministic_pipeline.py
tests/snapshots/: clarify_snapshot.json  summary_snapshot.json
(+104 files in other folders)
