[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifepath-planner"
version = "0.1.0"
description = "Multi-stage budgeting assistant with AI-powered clarification and optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "SQLAlchemy>=2.0.32",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.2",
    "typing_extensions>=4.15.0",
    "openpyxl>=3.1.5",
    "uvicorn[standard]>=0.30.3",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "opentelemetry-instrumentation-logging>=0.47b0",
    "python-json-logger>=2.0.7",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
where = ["services"]
include = ["shared*"]

[tool.setuptools.package-dir]
"" = "services"

[tool.pyright]
extraPaths = [
    "services/shared",
    "services/api-gateway/src",
    "services/budget-ingestion-service/src",
    "services/clarification-service/src",
    "services/optimization-service/src",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
markers = [
    "integration: deterministic multi-service pipeline tests",
]
pythonpath = [
    "services",
    "services/shared",
]

