[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifepath-planner"
version = "0.1.0"
description = "Multi-stage budgeting assistant with AI-powered clarification and optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "SQLAlchemy>=2.0.32",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.2",
    "typing_extensions>=4.15.0",
    "openpyxl>=3.1.5",
    "uvicorn[standard]>=0.30.3",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "opentelemetry-instrumentation-logging>=0.47b0",
    "python-json-logger>=2.0.7",
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools.packages.find]
where = ["services"]
include = ["shared*"]

[tool.setuptools.package-dir]
"" = "services"

[tool.pyright]
extraPaths = [
    "services/shared",
    "services/api-gateway/src",
    "services/budget-ingestion-service/src",
    "services/clarification-service/src",
    "services/optimization-service/src",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
markers = [
    "integration: deterministic multi-service pipeline tests",
]
pythonpath = [
    "services",
    "services/shared",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "node_modules",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (FastAPI Depends/File pattern)
    "B905",  # zip() without strict= (not always needed)
]

[tool.ruff.lint.per-file-ignores]
# Allow module-level imports after code in main.py files (setup code pattern)
"services/*/src/main.py" = ["E402"]
"services/api-gateway/src/main.py" = ["E402"]
# Allow E402 in files with docstrings after __future__ imports
"services/*/src/*.py" = ["E402"]
"services/*/src/providers/*.py" = ["E402", "F401"]
"services/shared/*.py" = ["E402"]
# Test files can have unused imports for fixtures and use deprecated typing
"**/tests/**" = ["F401", "UP035"]
# Scripts may have unused variables during development
"scripts/**" = ["F841", "UP035"]

