[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifepath-shared"
version = "0.1.0"
description = "Shared utilities for LifePath Planner services"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-httpx>=0.47b0",
    "opentelemetry-instrumentation-logging>=0.47b0",
    "python-json-logger>=2.0.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "observability*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]



